plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.cytomine'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    sourceCompatibility = '17'
}

bootJar {
    archiveFileName = 'e2e-tests.jar'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.seleniumhq.selenium:selenium-java'
    implementation 'org.seleniumhq.selenium:selenium-java'
}

tasks.named('test') {
	useJUnitPlatform()
	// Enable parallel test execution (equivalent to Maven Surefire <parallel>methods</parallel>)
	systemProperty 'junit.jupiter.execution.parallel.enabled', 'true'
	systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
	systemProperty 'junit.jupiter.execution.parallel.mode.classes.default', 'concurrent'
	systemProperty 'junit.jupiter.execution.parallel.config.strategy', 'dynamic'
	systemProperty 'junit.jupiter.execution.parallel.config.dynamic.factor', '1'
}
